@@ -3,7 +3,6 @@ package com.example.conect_database.service;
 import com.example.conect_database.entity.Script;
 import com.example.conect_database.entity.Scene;
 import com.example.conect_database.Repository.ScriptRepository;
-import com.example.conect_database.service.CloudinaryService;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -11,9 +10,12 @@ import org.springframework.stereotype.Service;
 
 import java.io.*;
 import java.net.URL;
+import java.net.URLConnection;
 import java.nio.file.*;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.ArrayList;
 
 @Service
 @RequiredArgsConstructor
@@ -24,90 +26,197 @@ public class VideoService {
     private final CloudinaryService cloudinaryService;
 
     public String generateVideoFromScript(Long scriptId) throws Exception {
-        logger.info("Bắt đầu generate video cho scriptId: {}", scriptId);
 
+        // 1. Lấy script và ảnh/audio
         Script script = scriptRepository.findById(scriptId)
                 .orElseThrow(() -> {
-                    logger.error("Không tìm thấy Script với id: {}", scriptId);
                     return new RuntimeException("Script not found");
                 });
+
         String audioUrl = script.getAudioUrl();
-        List<String> imageUrls = script.getScenes().stream()
+        List<Scene> scenes = script.getScenes();
+        List<String> imageUrls = scenes.stream()
                 .map(Scene::getImageUrl)
                 .collect(Collectors.toList());
 
-        logger.info("Tìm thấy {} ảnh cho scriptId: {}", imageUrls.size(), scriptId);
-        logger.debug("Danh sách imageUrls: {}", imageUrls);
-        logger.info("Audio url: {}", audioUrl);
+        String fullText = scenes.stream()
+                .map(Scene::getDescription)
+                .collect(Collectors.joining(" "));
+    
+        List<Integer> sceneSplitIndexes = splitSceneByKeywords(fullText);
 
-        // 1. Tải ảnh về thư mục tạm
+        // 2. Tạo thư mục tạm
         Path tempDir = Files.createTempDirectory("video-gen");
-        logger.info("Tạo thư mục tạm: {}", tempDir.toAbsolutePath());
+
+        
+        // Tải ảnh từng cảnh
         for (int i = 0; i < imageUrls.size(); i++) {
-            String imgUrl = imageUrls.get(i);
-            Path imgPath = tempDir.resolve(String.format("img%03d.jpg", i));
-            logger.info("Đang tải ảnh {} về {}", imgUrl, imgPath.toAbsolutePath());
-            try (InputStream in = new URL(imgUrl).openStream()) {
-                Files.copy(in, imgPath, StandardCopyOption.REPLACE_EXISTING);
-                logger.info("Tải thành công ảnh {}", imgPath.getFileName());
-            } catch (Exception e) {
-                logger.error("Lỗi khi tải ảnh {}: {}", imgUrl, e.getMessage(), e);
-                throw e;
-            }
+            downloadFileWithTimeout(imageUrls.get(i), tempDir.resolve(String.format("img%03d.jpg", i)));
         }
-        // 2. Tải audio về
+
+        // 4. Tải audio về
         Path audioPath = tempDir.resolve("audio.mp3");
-        logger.info("Đang tải audio {} về {}", audioUrl, audioPath.toAbsolutePath());
-        try (InputStream in = new URL(audioUrl).openStream()) {
-            Files.copy(in, audioPath, StandardCopyOption.REPLACE_EXISTING);
-            logger.info("Tải thành công audio {}", audioPath.getFileName());
-        } catch (Exception e) {
-            logger.error("Lỗi khi tải audio {}: {}", audioUrl, e.getMessage(), e);
-            throw e;
-        }
-        // 3. Tạo file text chứa danh sách ảnh cho ffmpeg
-        Path listFile = tempDir.resolve("images.txt");
-        logger.info("Tạo file danh sách ảnh cho ffmpeg: {}", listFile.toAbsolutePath());
-        try (BufferedWriter writer = Files.newBufferedWriter(listFile)) {
-            for (int i = 0; i < imageUrls.size(); i++) {
-                writer.write("file 'img" + String.format("%03d", i) + ".jpg'\n");
-            }
-            logger.info("Tạo thành công file images.txt");
-        } catch (Exception e) {
-            logger.error("Lỗi khi tạo file images.txt: {}", e.getMessage(), e);
-            throw e;
-        }
-        // 4. Gọi ffmpeg để tạo video từ ảnh
-        Path videoPath = tempDir.resolve("output.mp4");
-        String ffmpegCmd = String.format(
-            "ffmpeg -y -f concat -safe 0 -i %s -i %s -c:v libx264 -c:a aac -shortest -pix_fmt yuv420p %s",
-            listFile.toAbsolutePath(), audioPath.toAbsolutePath(), videoPath.toAbsolutePath()
-        );
-        logger.info("Chạy lệnh ffmpeg: {}", ffmpegCmd);
-        Process process = Runtime.getRuntime().exec(ffmpegCmd);
-        int exitCode = process.waitFor();
-        if (exitCode != 0) {
-            logger.error("ffmpeg thất bại với exit code: {}", exitCode);
-            // Đọc stderr để log chi tiết lỗi ffmpeg
-            try (BufferedReader errorReader = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
+        downloadFileWithTimeout(audioUrl, audioPath);
+
+        // Gọi script Python whisper_split.py để sinh scene_timestamps.json
+        try {
+            ProcessBuilder whisperPb = new ProcessBuilder(
+                "python", ".." + File.separator + "whisper-split" + File.separator + "whisper_split.py", audioPath.toString()
+            );
+            whisperPb.directory(tempDir.toFile());
+            whisperPb.redirectErrorStream(true);
+            Process whisperProcess = whisperPb.start();
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(whisperProcess.getInputStream()))) {
                 String line;
-                while ((line = errorReader.readLine()) != null) {
-                    logger.error("ffmpeg: {}", line);
+                while ((line = reader.readLine()) != null) {
+                    logger.info("whisper: {}", line);
                 }
             }
-            throw new RuntimeException("ffmpeg failed");
-        }
-        logger.info("Tạo video thành công: {}", videoPath.toAbsolutePath());
-        // Upload lên Cloudinary
-        logger.info("Đang upload video lên Cloudinary...");
-        String videoUrl;
-        try {
-            videoUrl = cloudinaryService.uploadVideo(Files.readAllBytes(videoPath), "video/");
-            logger.info("Upload thành công. Video url: {}", videoUrl);
+            int exitCode = whisperProcess.waitFor();
+            if (exitCode != 0) {
+                logger.warn("Whisper script failed with exit code: {}", exitCode);
+            }
         } catch (Exception e) {
-            logger.error("Lỗi khi upload video lên Cloudinary: {}", e.getMessage(), e);
-            throw e;
+            logger.warn("Không thể chạy whisper_split.py: {}", e.getMessage());
         }
+
+        // Đọc timestamp từ file JSON nếu có
+        List<Double> sceneTimestamps = new ArrayList<>();
+        Path whisperJsonPath = tempDir.resolve("scene_timestamps.json");
+        if (Files.exists(whisperJsonPath)) {
+            try (BufferedReader br = Files.newBufferedReader(whisperJsonPath)) {
+                StringBuilder sb = new StringBuilder();
+                String line;
+                while ((line = br.readLine()) != null) sb.append(line);
+                String json = sb.toString();
+                json = json.replaceAll("\\[|\\]", "");
+                if (!json.trim().isEmpty()) {
+                    for (String s : json.split(",")) {
+                        sceneTimestamps.add(Double.parseDouble(s.trim()));
+                    }
+                }
+            } catch (Exception e) {
+                logger.warn("Không đọc được scene_timestamps.json, sẽ chia đều duration: {}", e.getMessage());
+            }
+        }
+
+        // Lấy tổng thời lượng audio
+        double audioDuration = getAudioDurationInSeconds(audioPath); // dùng ffprobe
+        int sceneCount = imageUrls.size();
+        List<Double> durations = new ArrayList<>();
+        if (sceneTimestamps.size() > 0) {
+            // Tính duration từng scene dựa vào timestamp
+            for (int i = 0; i < sceneCount; i++) {
+                double start = (i == 0) ? 0 : sceneTimestamps.get(i - 1);
+                double end = (i < sceneTimestamps.size()) ? sceneTimestamps.get(i) : audioDuration;
+                durations.add(end - start);
+            }
+        } else {
+            // Fallback: chia đều
+            double durationPerScene = audioDuration / sceneCount;
+            for (int i = 0; i < sceneCount; i++) durations.add(durationPerScene);
+        }
+
+        // Tạo file images.txt cho ffmpeg slideshow
+        Path listFile = tempDir.resolve("images.txt");
+        try (BufferedWriter writer = Files.newBufferedWriter(listFile)) {
+            for (int i = 0; i < sceneCount; i++) {
+                writer.write("file 'img" + String.format("%03d", i) + ".jpg'\n");
+                writer.write("duration " + durations.get(i) + "\n");
+            }
+            // Ghi lặp lại ảnh cuối (ffmpeg yêu cầu để hiển thị đúng)
+            writer.write("file 'img" + String.format("%03d", sceneCount - 1) + ".jpg'\n");
+        }
+
+        // 5. Tạo video từ ảnh + audio
+        Path videoPath = tempDir.resolve("output.mp4");
+        ProcessBuilder pb = new ProcessBuilder(
+                "ffmpeg",
+                "-f", "concat",
+                "-safe", "0",
+                "-i", listFile.toString(),
+                "-i", audioPath.toString(),
+                "-c:v", "libx264",        // Tuỳ chọn GPU preset (có thể dùng: default, fast, slow, p1-p7)
+                "-c:a", "aac",
+                "-shortest",
+                "-pix_fmt", "yuv420p",
+                "-y", videoPath.toString()
+        );
+        pb.directory(tempDir.toFile());
+        pb.redirectErrorStream(true);
+
+        Process process = pb.start();
+
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                logger.info("ffmpeg: {}", line);
+            }
+        }
+
+        int exitCode = process.waitFor();
+        if (exitCode != 0) {
+            throw new RuntimeException("ffmpeg failed with exit code: " + exitCode);
+        }
+
+
+     //upload
+        String videoUrl = cloudinaryService.uploadVideo(Files.readAllBytes(videoPath), "video/");
+
+        // 7. Dọn thư mục tạm
+        cleanupTempDirectory(tempDir);
+
         return videoUrl;
     }
-} 
+
+    private void downloadFileWithTimeout(String urlStr, Path targetPath) throws IOException {
+        URL url = new URL(urlStr);
+        URLConnection conn = url.openConnection();
+        conn.setConnectTimeout(5000); // 5 giây timeout kết nối
+        conn.setReadTimeout(10000);   // 10 giây timeout đọc dữ liệu
+
+        try (InputStream in = conn.getInputStream()) {
+            Files.copy(in, targetPath, StandardCopyOption.REPLACE_EXISTING);
+        }
+    }
+
+    private void cleanupTempDirectory(Path dir) {
+        try {
+            Files.walk(dir)
+                    .sorted(Comparator.reverseOrder())
+                    .map(Path::toFile)
+                    .forEach(File::delete);
+           
+        } catch (Exception e) {
+            logger.warn("Không thể xoá thư mục tạm {}: {}", dir, e.getMessage());
+        }
+    }
+    // hàm tách duration
+    private List<Integer> splitSceneByKeywords(String text) {
+        List<String> keywords = List.of("Tiếp đến", "Sau đó", "Trong khi đó", "Lúc này");
+        List<Integer> indexes = new ArrayList<>();
+        for (String keyword : keywords) {
+            int index = text.indexOf(keyword);
+            if (index != -1) indexes.add(index);
+        }
+        indexes.sort(Integer::compare);
+        return indexes;
+    }
+    // hàm lấy thời lượng audio 
+    private double getAudioDurationInSeconds(Path audioPath) throws IOException, InterruptedException {
+        ProcessBuilder pb = new ProcessBuilder(
+                "ffprobe", "-v", "error",
+                "-show_entries", "format=duration",
+                "-of", "default=noprint_wrappers=1:nokey=1",
+                audioPath.toString()
+        );
+        pb.redirectErrorStream(true);
+        Process process = pb.start();
+    
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+            String line = reader.readLine();
+            return line != null ? Double.parseDouble(line) : 0;
+        }
+    }
+    
+}
